@@ -1,4 +1,10 @@
+2013-05-17  Araki Ken  <arakiken@users.sf.net>
+
+	* fb/x_window.c: Optimization of draw_string() for 1bpp.
+
 2013-05-16  Araki Ken  <arakiken@users.sf.net>
+
+	* fb/x_display.c: Optimization of put_image_124bpp() and x_display_fill_with().
 
 	* fb/x_imagelib.c: Check of sixel picture size is fixed.
 
